@@ -163,6 +163,7 @@ $wgOptionalMessages = array(
 	'unit-pixel',
 	'userrights-irreversible-marker',
 	'tog-nolangconversion',
+	'tog-noconvertlink',
 	'yourvariant',
 	'variantname-zh-hans',
 	'variantname-zh-hant',
